# nomnom-lacon-v

./: Dockerfile  conftest.py  justfile  pyproject.toml
config/: apps.py  settings.py  urls.py
lacon_v_app/: admin.py  apps.py  auth.py  convention.py  urls.py  views.py
lacon_v_app/migrations/: 0001_initial.py
lacon_v_app/static/css/: lacon-v.css
lacon_v_app/templates/bits/: convention_footer.html
lacon_v_app/templates/hugopacket/bits/: welcome.html
lacon_v_app/templates/laconv/admin/: login.html
lacon_v_app/templates/nominate/bits/: nomination_instructions.html  voting_instructions.html
lacon_v_app/tests/: test_auth.py  test_auth_integration.py
scripts/: ensure_env.sh
